--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^2.3.1",
+    "element-plus": "^2.5.3",
     "normalize.css": "^8.0.1",
     "save": "^2.9.0",
     "scss": "^0.2.4",
@@ -18,6 +20,8 @@
     "@vitejs/plugin-vue": "^4.0.0",
     "sass": "^1.70.0",
     "typescript": "^4.9.3",
+    "unplugin-auto-import": "^0.17.5",
+    "unplugin-vue-components": "^0.26.0",
     "vite": "^4.1.0",
     "vue-tsc": "^1.0.24"
   }
