--- a/package.json
+++ b/package.json
@@ -17,10 +17,13 @@
     "vue": "^3.2.45"
   },
   "devDependencies": {
+    "@types/node": "^20.11.8",
     "@vitejs/plugin-vue": "^4.0.0",
     "sass": "^1.70.0",
     "typescript": "^4.9.3",
+    "unocss": "^0.58.4",
     "unplugin-auto-import": "^0.17.5",
+    "unplugin-element-plus": "^0.8.0",
     "unplugin-vue-components": "^0.26.0",
     "vite": "^4.1.0",
     "vue-tsc": "^1.0.24"
