--- a/package.json
+++ b/package.json
@@ -17,15 +17,29 @@
     "vue": "^3.2.45"
   },
   "devDependencies": {
+    "@antfu/eslint-config": "^2.6.3",
+    "@iconify-json/carbon": "^1.1.28",
+    "@iconify-json/solar": "^1.1.9",
     "@types/node": "^20.11.8",
+    "@typescript-eslint/eslint-plugin": "^6.19.1",
+    "@typescript-eslint/parser": "^6.19.1",
+    "@unocss/eslint-config": "^0.58.4",
     "@vitejs/plugin-vue": "^4.0.0",
+    "eslint": "^8.56.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-vue": "^9.20.1",
+    "prettier": "^3.2.4",
     "sass": "^1.70.0",
     "typescript": "^4.9.3",
     "unocss": "^0.58.4",
     "unplugin-auto-import": "^0.17.5",
     "unplugin-element-plus": "^0.8.0",
+    "unplugin-icons": "^0.18.3",
     "unplugin-vue-components": "^0.26.0",
     "vite": "^4.1.0",
-    "vue-tsc": "^1.0.24"
+    "vite-plugin-svg-icons": "^2.0.1",
+    "vue-tsc": "^1.8.27"
   }
 }
