--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "normalize.css": "^8.0.1",
     "save": "^2.9.0",
     "scss": "^0.2.4",
-    "vue": "^3.2.45"
+    "vue": "^3.2.45",
+    "vue-router": "^4.2.5"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^2.6.3",
