--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@element-plus/icons-vue": "^2.3.1",
     "element-plus": "^2.5.3",
     "normalize.css": "^8.0.1",
+    "pinia": "^2.1.7",
+    "pinia-plugin-persistedstate": "^3.2.1",
     "save": "^2.9.0",
     "scss": "^0.2.4",
     "vue": "^3.2.45",
