--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "-": "^0.0.1",
     "@element-plus/icons-vue": "^2.3.1",
+    "@types/jsdom": "^21.1.6",
+    "axios": "^1.6.7",
+    "D": "^1.0.0",
     "element-plus": "^2.5.3",
     "normalize.css": "^8.0.1",
     "pinia": "^2.1.7",
@@ -23,11 +27,13 @@
     "@antfu/eslint-config": "^2.6.3",
     "@iconify-json/carbon": "^1.1.28",
     "@iconify-json/solar": "^1.1.9",
+    "@tsconfig/node18": "^18.2.2",
     "@types/node": "^20.11.8",
     "@typescript-eslint/eslint-plugin": "^6.19.1",
     "@typescript-eslint/parser": "^6.19.1",
     "@unocss/eslint-config": "^0.58.4",
     "@vitejs/plugin-vue": "^4.0.0",
+    "@vue/tsconfig": "^0.5.1",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.29.1",
