--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "-": "^0.0.1",
     "@element-plus/icons-vue": "^2.3.1",
     "@types/jsdom": "^21.1.6",
+    "@vueuse/core": "^10.7.2",
     "axios": "^1.6.7",
     "D": "^1.0.0",
     "element-plus": "^2.5.3",
