--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "dependencies": {
     "-": "^0.0.1",
     "@element-plus/icons-vue": "^2.3.1",
+    "@types/echarts": "^4.9.22",
     "@types/jsdom": "^21.1.6",
     "@vueuse/core": "^10.7.2",
     "axios": "^1.6.7",
     "D": "^1.0.0",
+    "echarts": "^5.4.3",
     "element-plus": "^2.5.3",
     "normalize.css": "^8.0.1",
     "pinia": "^2.1.7",
@@ -22,6 +24,7 @@
     "save": "^2.9.0",
     "scss": "^0.2.4",
     "vue": "^3.2.45",
+    "vue-echarts": "^6.6.8",
     "vue-router": "^4.2.5"
   },
   "devDependencies": {
