--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/jsdom": "^21.1.6",
     "@vueuse/core": "^10.7.2",
     "axios": "^1.6.7",
+    "currency.js": "^2.0.4",
     "D": "^1.0.0",
     "echarts": "^5.4.3",
     "element-plus": "^2.5.3",
