--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "pinia-plugin-persistedstate": "^3.2.1",
     "save": "^2.9.0",
     "scss": "^0.2.4",
+    "swiper": "^11.0.5",
     "vue": "^3.2.45",
     "vue-echarts": "^6.6.8",
     "vue-router": "^4.2.5"
