--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@element-plus/icons-vue": "^2.3.1",
     "@types/echarts": "^4.9.22",
     "@types/jsdom": "^21.1.6",
+    "@types/swiper": "^6.0.0",
     "@vueuse/core": "^10.7.2",
     "axios": "^1.6.7",
     "currency.js": "^2.0.4",
