--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.6.7",
     "currency.js": "^2.0.4",
     "D": "^1.0.0",
+    "default-passive-events": "^2.0.0",
     "echarts": "^5.4.3",
     "element-plus": "^2.5.3",
     "normalize.css": "^8.0.1",
